--- a/noorain-portfolio/package.json
+++ b/noorain-portfolio/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "force": "^0.0.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
